Update and rename indexxxxx.html to index.html

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     <div id="page4" class="page">
         <h2>Gerbang pertama telah terbuka...</h2>
-        <img id="image-black-hole.png" src="foto-lubang-hitam.jpg" alt="Black Hole">
+        <img id="image-black-hole.png" src="image-black-hole.png" alt="Black Hole">
         <button class="btn" onclick="showPage('page5')">Lanjutkan Perjalanan</button>
     </div>
 
