--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div id="result" class="hidden"></div>
     </div>
     
-    <audio id="interstellar.mp3" src="quiz-song.mp3" loop></audio>
+    <audio id="interstellar.mp3" src="interstellar.mp3" loop></audio>
 
     <script src="script.js"></script>
 </body>
